# mindstack-mercil

./: .dockerignore  .gitignore  README.md  assets_rows.json  biome.json  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  requirements.txt  style.css  turbo.json
.cursor/rules/: project.mdc  turbo-repo.mdc  uv.mdc
.husky/: commit-msg
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  docker-compose.dev.yml  main.py  package.json  pyproject.toml  run.py  run_dev.py
apps/api/.cursor/rules/: db.mdc  logging.mdc  project-structure.mdc
apps/api/alembic/: env.py
apps/api/alembic/versions/: 7217985fa397_initial_migration_create_asset_.py  ce564a4a65b1_initial_migration_create_asset_.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/core/config/: constants.py  logging.py  settings.py
apps/api/app/db/: __init__.py  database.py
apps/api/app/models/: __init__.py  asset.py  user_profile.py
apps/api/app/routers/: assets.py  chat.py  health.py  ingest.py  recommend.py  search.py
apps/api/app/schemas/: asset.py  chat.py  health.py  search.py
apps/api/app/services/: __init__.py  ai_chat_service.py  chat_service.py  ingest_service.py  parser_service.py  recommend_service.py  search_service.py
apps/api/data/: asset_type_rows.json  assets_rows.json  ingest.py
apps/api/docker/: postgres.Dockerfile
apps/api/scripts/: init.sql
archive/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  test_service.py
backend/: data.js  indexer.js
scripts/: ingest.py  init.sql
(+80 files in other folders)
