[project]
name = "api"
version = "1.0.0"
description = "API service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.27",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.6",
    "geoalchemy2>=0.18.0",
    "sentence-transformers>=3.0.0",
    "geopy>=2.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
